--- a/index.html
+++ b/index.html
@@ -1089,5 +1089,15 @@
     </footer>
 
     <script src="script.js"></script>
+<script src="api-handler-simple.js"></script>
+<script src="script.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        initializeTheme();
+        initializeReadingProgress();
+        initializeGMR();
+    });
+</script>
+	
 </body>
 </html>
