--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="hero-top">
                 <div class="brand">
                     <!-- 🎯 LOGO GLOBAL EXCHANGE - Reemplaza la URL cuando tengas el logo -->
-                    <img src="logo-horizontal-white.png" alt="Global Exchange" class="brand-logo-img">
+                    <img src="https://assets-sharedcontent.global-exchange.com/1dced37c-b424-4190-a730-3c9ce29c6369.svg" alt="Global Exchange" class="brand-logo-img">
                     <div class="brand-text">
                         <h1 class="brand-title">Global Media Report</h1>
                         <p class="brand-subtitle">Internal News Intelligence</p>
